@@ -1,6 +1,6 @@
 /*
 * aureport-scan.c - Extract interesting fields and check for match
-* Copyright (c) 2005-06, 2008 Red Hat Inc., Durham, North Carolina.
+* Copyright (c) 2005-06, 2008, 2011 Red Hat Inc., Durham, North Carolina.
 * All Rights Reserved. 
 *
 * This software may be freely redistributed and/or modified under the
@@ -298,7 +298,7 @@ static int per_event_summary(llist *l)
 			break;
 		case RPT_AUTH:
 			if (list_find_msg(l, AUDIT_USER_AUTH)) {
-				if (l->s.loginuid == -1 && l->s.acct != NULL)
+				if (l->s.loginuid == -2 && l->s.acct != NULL)
 					slist_add_if_uniq(&sd.users, l->s.acct);
 				else {
 					char name[64];
@@ -312,7 +312,7 @@ static int per_event_summary(llist *l)
 			} else if (list_find_msg(l, AUDIT_USER_ACCT)) {
 				// Only count the failures
 				if (l->s.success == S_FAILED) {
-					if (l->s.loginuid == -1 && 
+					if (l->s.loginuid == -2 && 
 						l->s.acct != NULL)
 					slist_add_if_uniq(&sd.users, l->s.acct);
 					else {
@@ -330,7 +330,7 @@ static int per_event_summary(llist *l)
 			break;
 		case RPT_LOGIN:
 			if (list_find_msg(l, AUDIT_USER_LOGIN)) {
-				if (l->s.loginuid == -1 && l->s.acct != NULL)
+				if (l->s.loginuid == -2 && l->s.acct != NULL)
 					slist_add_if_uniq(&sd.users, l->s.acct);
 				else {
 					char name[64];
@@ -386,7 +386,7 @@ static int per_event_summary(llist *l)
 				slist_add_if_uniq(&sd.terms, l->s.terminal);
 			break;
 		case RPT_USER:
-			if (l->s.loginuid != -1) {
+			if (l->s.loginuid != -2) {
 				char tmp[32];
 				snprintf(tmp, sizeof(tmp), "%d", l->s.loginuid);
 				slist_add_if_uniq(&sd.users, tmp);
@@ -767,7 +767,7 @@ static void do_summary_total(llist *l)
 	}
 
 	// add users
-	if (l->s.loginuid != -1) {
+	if (l->s.loginuid != -2) {
 		char tmp[32];
 		snprintf(tmp, sizeof(tmp), "%d", l->s.loginuid);
 		slist_add_if_uniq(&sd.users, tmp);
