@@ -45,11 +45,11 @@ ilist *event_type = NULL;
 pid_t event_pid = -1, event_ppid = -1;
 success_t event_success = S_UNSET;
 int event_exact_match = 0;
-uid_t event_uid = -1, event_euid = -1, event_loginuid = -1;
+uid_t event_uid = -1, event_euid = -1, event_loginuid = -2;
 int event_syscall = -1;
 int event_ua = 0, event_ga = 0, event_se = 0;
 int just_one = 0;
-int event_session_id = -1;
+int event_session_id = -2;
 int event_exit = 0, event_exit_is_set = 0;
 int line_buffered = 0;
 const char *event_key = NULL;
