@@ -3,6 +3,7 @@
 - Fix debug output resolving numeric address
 - Fix spelling error in audit.rules (#667845)
 - Improve warning in auditctl regarding immutable mode (#654883)
+- In ausearch, allow searching for auid -1
 
 1.7.18
 - Update time examples in ausearch/report man pages
